# django-lti-toolbox

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  MANIFEST.in  Makefile  README.md  docker-compose.yml  setup.cfg
.circleci/: config.yml
env.d/development/: common  postgresql
gitlint/: gitlint_emoji.py
sandbox/: forms.py  manage.py  settings.py  urls.py  views.py  wsgi.py
sandbox/templates/demo/: consumer.html  debug_infos.html
src/lti_toolbox/: __init__.py  admin.py  apps.py  backend.py  exceptions.py  factories.py  launch_params.py  lti.py  models.py  validator.py  views.py
src/lti_toolbox/migrations/: 0001_initial.py  0002_lticonsumer_url.py  0003_alter_lticonsumer_table_alter_ltipassport_table.py
tests/lti_toolbox/: test_launch_params.py  test_lti.py  test_models.py  test_utils.py  utils.py
