[metadata]
name = django-lti-toolbox
version = 1.2.0
description = A Django application to build LTI Tool Providers
long_description = file:README.md
long_description_content_type = text/markdown
author = Open FUN (France Universite Numerique)
author_email = fun.dev@fun-mooc.fr
url = https://github.com/openfun/django-lti-toolbox
license = MIT
keywords = Django, LTI
classifiers =
    Development Status :: 5 - Production/Stable
    Framework :: Django
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8

[options]
include_package_data = True
install_requires =
    Django
    oauthlib>=3.0.0
package_dir =
    =src
packages = find:
zip_safe = True

[options.extras_require]
dev =
    bandit==1.6.2
    black==22.3.0
    flake8==3.7.9
    ipdb==0.12.2
    ipython==7.9.0
    isort==4.3.21
    mypy==0.761
    pyfakefs==3.7.1
    pylint-django==2.0.13
    pylint==2.4.4
    pytest-cov==2.8.1
    pytest-django==4.5.2
    pytest==7.4.0
ci =
    twine==2.0.0
sandbox =
    Django==4.2.4
    django-configurations==2.4.1
    factory_boy==2.12.0
    psycopg2-binary==2.8.4
    django-crispy-forms==1.9.1

[options.packages.find]
where = src

[wheel]
universal = 1

;;
;; Third-party packages configuration
;;
[flake8]
max-line-length = 99
exclude =
    .git,
    .venv,
    build,
    venv,
    __pycache__,
    node_modules,
    */migrations/*

[isort]
known_ltitoolbox=lti_toolbox,sandbox
include_trailing_comma=True
line_length=88
multi_line_output=3
sections=FUTURE,STDLIB,THIRDPARTY,LTITOOLBOX,FIRSTPARTY,LOCALFOLDER
skip_glob=venv,gitlint

[tool:pytest]
addopts = -v --cov-report term-missing
python_files =
    test_*.py
    tests.py
testpaths =
    tests

[mypy]
ignore_missing_imports = True

[mypy-*.migrations.*]
# Django migrations should not be type checked
ignore_errors = True
